language/move-lang/tests/move_check/expansion/pack_no_fields_block_expr.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/pack_no_fields_block_expr.move:4:21
  │
4 │         let s = S { let x = 0; x };
  │                     ^^^
  │                     │
  │                     Unexpected 'let'
  │                     Expected an identifier

